# presentation-nbx-2023

./: .gitignore
java/app/: build.gradle.kts
java/app/src/main/java/presentation/: App.java  Async.java  ErrorHandling.java
java/app/src/test/java/presentation/: AppTest.java
python/src/: async.py  error.py  main.py
rust/: Cargo.toml
rust/algebraic-data-types/: Cargo.toml
rust/algebraic-data-types/src/: main.rs
rust/error-handling/: Cargo.toml
rust/error-handling/src/: main.rs
rust/hello_macro/: Cargo.toml
rust/hello_macro_derive/: Cargo.toml
rust/http-server/: Cargo.toml
rust/macro-usage/: Cargo.toml
rust/my_macros/: Cargo.toml
rust/polymorphism/: Cargo.toml
rust/polymorphism/src/: main.rs
rust/zero-cost-abstraction/: Cargo.toml
rust/zero-cost-abstraction/src/: main.rs
tex/: presentation.tex
