[workspace]
resolver = "2"
members = [
  "algebraic-data-types",
  "error-handling",
  "hello_macro",
  "hello_macro_derive",
  "http-server",
  "macro-usage",
  "my_macros",
  "polymorphism",
  "zero-cost-abstraction",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Paweł Nowak"]
description = "NBX presentation"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
