[package]
name = "hello_macro_derive"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
