[package]
name = "http-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["http2", "tracing"] }
tokio.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
